[package]
name = "zeal-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
dirs = "6.0.0"
plist = "1.7.1"
rusqlite = { version = "0.31", features = ["bundled"] } 
libsqlite3-sys = "0.28"
urlencoding = "2.1.3"
which = "8.0.0"
fuzzy-matcher = "0.3.7"
ansi_term = "0.12.1"
rayon = "1.10.0"
